df-derive/tests/fail/143-fail-as-string-on-borrowed-slice.rs
use df_derive::ToDataFrame;
#[path = "../common.rs"]
mod core;

#[derive(ToDataFrame)]
struct Bad<'a> {
    #[df_derive(as_string)]
    items: &'a [u16],
}

fn main() {}
