df-derive/tests/fail/143-fail-as-string-on-borrowed-slice.stderr
error: field `items` has `as_string`, but borrowed slices (`&[T]`/`Cow<'_, [T]>`) do not implement `Display`; use `Vec<T>` for list columns, or wrap the value in a custom type that implements `Display`
 --> tests/fail/143-fail-as-string-on-borrowed-slice.rs:7:5
  |
7 | /     #[df_derive(as_string)]
8 | |     items: &'a [u16],
  | |____________________^
